Updated gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,6 @@
 
 *.replit
 *.nix
-npm-debug.log
-box-node-express-skeleton-app/app/config/local.js
-box-node-express-skeleton-app/app/config/production.js
-box-node-express-skeleton-app/app/*_config.json
+.git
 config.json
 package-lock.json
